The changes I've made: Added the missing $bluesky-color variable to fix the SCSS compilation error Changed the layout from home to archive in index.md since the Academic Pages template doesn't have a home layout Fixed the SCSS import path format in main.scss These changes should resolve the build errors. The key fixes were: Adding the missing color variable that was causing the SCSS compilation to fail Using a correct layout that exists in the template Ensuring proper SCSS import syntax

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -106,6 +106,7 @@ $vimeo-color : #1ab7ea !default;
 $vine-color : #00bf8f !default;
 $youtube-color : #bb0000 !default;
 $xing-color : #006567 !default;
+$bluesky-color : #0284C7 !default;
 
 /* links */
 $link-color : $info-color !default;
